[package]
name = "gstreamer-app"
version = "0.18.8"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
categories = ["api-bindings", "multimedia"]
description = "Rust bindings for GStreamer App library"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://gstreamer.freedesktop.org"
documentation = "https://gstreamer.pages.freedesktop.org/gstreamer-rs/stable/latest/docs/gstreamer_app/"
keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]
edition = "2021"
rust-version = "1.56"

[dependencies]
futures-core = "0.3"
futures-sink = "0.3"
bitflags = "1.0"
libc = "0.2"
ffi = { package = "gstreamer-app-sys", version = "0.18", path = "sys", features = ["v1_8"] }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.15", version = "0.15" }
gst = { package = "gstreamer", version = "0.18", path = "../gstreamer" }
gst-base = { package = "gstreamer-base", version = "0.18", path = "../gstreamer-base" }
once_cell = "1.0"

[dev-dependencies]
futures-util = { version = "0.3", features = ["sink"] }
futures-executor = "0.3"
gir-format-check = "0.1"

[features]
default = []
v1_10 = ["gst/v1_10", "gst-base/v1_10", "ffi/v1_10"]
v1_12 = ["gst/v1_12", "gst-base/v1_12", "ffi/v1_12", "v1_10"]
v1_14 = ["gst/v1_14", "gst-base/v1_14", "ffi/v1_14", "v1_12"]
v1_16 = ["gst/v1_16", "gst-base/v1_16", "ffi/v1_16", "v1_14"]
v1_18 = ["gst/v1_18", "gst-base/v1_18", "ffi/v1_18", "v1_16"]
v1_20 = ["gst/v1_20", "gst-base/v1_20", "ffi/v1_20", "v1_18"]
dox = ["v1_20", "ffi/dox", "glib/dox", "gst/dox", "gst-base/dox"]

[package.metadata.docs.rs]
features = ["dox"]
