[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "1.0"
libc = "0.2"
glib-sys = { git = "https://github.com/gtk-rs/sys" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"

[dependencies.gstreamer-base-sys]
path = "../gstreamer-base-sys"

[features]
v1_2 = []
v1_4 = ["v1_2"]
v1_6 = ["v1_4"]
v1_8 = ["v1_6"]
v1_10 = ["v1_8"]
v1_12 = ["v1_10"]
v1_14 = ["v1_12"]
dox = []

[lib]
name = "gstreamer_audio_sys"

[package]
build = "build.rs"
links = "gstaudio-1.0"
name = "gstreamer-audio-sys"
version = "0.5.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
description = "FFI bindings to libgstaudio-1.0"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia"]
repository = "https://github.com/sdroege/gstreamer-sys"
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "sdroege/gstreamer-sys", branch = "master" }
