[package]
name = "gstreamer-audio"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
description = "Rust bindings for GStreamer Audio library"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://gstreamer.freedesktop.org/documentation/rust/stable/latest/docs/gstreamer_audio/"
keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]
version.workspace = true
categories.workspace = true
repository.workspace = true 
homepage.workspace = true 
edition.workspace = true 
rust-version.workspace = true 

[dependencies]
libc = "0.2"
cfg-if = "1.0"
gstreamer-audio-sys.workspace = true
glib.workspace = true
gst.workspace = true
gst-base.workspace = true
serde = { version = "1.0", optional = true }
smallvec = "1.0"

[dev-dependencies]
itertools = "0.14"
serde_json = "1.0"
gir-format-check = "0.1"

[features]
default = []
v1_16 = ["gst/v1_16", "gst-base/v1_16", "gstreamer-audio-sys/v1_16"]
v1_18 = ["gst/v1_18", "gst-base/v1_18", "gstreamer-audio-sys/v1_18", "v1_16"]
v1_20 = ["gst/v1_20", "gst-base/v1_20", "gstreamer-audio-sys/v1_20", "v1_18"]
v1_22 = ["gst/v1_22", "gst-base/v1_22", "gstreamer-audio-sys/v1_22", "v1_20"]
v1_24 = ["gst/v1_24", "gst-base/v1_24", "gstreamer-audio-sys/v1_24", "v1_22"]
v1_26 = ["gst/v1_26", "gst-base/v1_26", "gstreamer-audio-sys/v1_26", "v1_24"]
v1_28 = ["gst/v1_28", "gst-base/v1_28", "gstreamer-audio-sys/v1_28", "v1_26"]
serde = ["dep:serde", "gst/serde"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
