[build-dependencies]
system-deps = "1.3"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v1_0_1 = []
v1_2 = []
v1_4 = ["v1_2"]
v1_6 = ["v1_4"]
v1_8 = ["v1_6"]
v1_10 = ["v1_8"]
v1_12 = ["v1_10"]
v1_12_1 = ["v1_12"]
v1_14 = ["v1_12_1"]
v1_14_1 = ["v1_14"]
v1_14_3 = ["v1_14_1"]
v1_16 = ["v1_14_3"]
v1_18 = ["v1_16"]
dox = []

[lib]
name = "gstreamer_base_sys"

[package]
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
build = "build.rs"
description = "FFI bindings to libgstbase-1.0"
documentation = "https://slomo.pages.freedesktop.org/rustdocs/gstreamer-sys/gstreamer_base_sys/"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia"]
license = "MIT"
links = "gstbase-1.0"
name = "gstreamer-base-sys"
readme = "README.md"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys"
version = "0.10.0"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.gstreamer_base_1_0]
name = "gstreamer-base-1.0"
version = "1.8"

[package.metadata.system-deps.gstreamer_base_1_0.feature-versions]
v1_10 = "1.10"
v1_12 = "1.12"
v1_12_1 = "1.12.1"
v1_14 = "1.14"
v1_14_1 = "1.14.1"
v1_14_3 = "1.14.3"
v1_16 = "1.16"
v1_18 = "1.17.2"
