[package]
name = "gstreamer-base"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
description = "Rust bindings for GStreamer Base library"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://gstreamer.freedesktop.org/documentation/rust/stable/latest/docs/gstreamer_base/"
keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]
version.workspace = true
categories.workspace = true
repository.workspace = true 
homepage.workspace = true 
edition.workspace = true 
rust-version.workspace = true 

[dependencies]
cfg-if = "1.0"
libc = "0.2"
gstreamer-base-sys.workspace = true
glib.workspace = true
gst.workspace = true
atomic_refcell = "0.1"

[dev-dependencies]
gir-format-check = "0.1"

[features]
default = []
v1_14_1 = ["gstreamer-base-sys/v1_14_1"]
v1_16 = ["gst/v1_16", "gstreamer-base-sys/v1_16", "v1_14_1"]
v1_18 = ["gst/v1_18", "gstreamer-base-sys/v1_18", "v1_16"]
v1_20 = ["gst/v1_20", "gstreamer-base-sys/v1_20", "v1_18"]
v1_22 = ["gst/v1_22", "gstreamer-base-sys/v1_22", "v1_20"]
v1_24 = ["gst/v1_24", "gstreamer-base-sys/v1_24", "v1_22"]
v1_26 = ["gst/v1_26", "gstreamer-base-sys/v1_26", "v1_24"]
v1_28 = ["gst/v1_28", "gstreamer-base-sys/v1_28", "v1_26"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
