[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gstreamer-base-sys]
path = "../gstreamer-base-sys"

[dependencies.gstreamer-pbutils-sys]
path = "../gstreamer-pbutils-sys"

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
v1_6 = ["gstreamer-sys/v1_6", "gstreamer-base-sys/v1_6", "gstreamer-pbutils-sys/v1_6"]
v1_8 = ["v1_6", "gstreamer-sys/v1_8", "gstreamer-base-sys/v1_8", "gstreamer-pbutils-sys/v1_8"]
v1_10 = ["v1_8", "gstreamer-sys/v1_10", "gstreamer-base-sys/v1_10", "gstreamer-pbutils-sys/v1_10"]
v1_12 = ["v1_10", "gstreamer-sys/v1_12", "gstreamer-base-sys/v1_12", "gstreamer-pbutils-sys/v1_12"]
v1_14 = ["v1_12", "gstreamer-sys/v1_14", "gstreamer-base-sys/v1_14", "gstreamer-pbutils-sys/v1_14"]
v1_16 = ["v1_14", "gstreamer-sys/v1_16", "gstreamer-base-sys/v1_16", "gstreamer-pbutils-sys/v1_16"]

[lib]
name = "gstreamer_editing_services_sys"

[package]
authors = ["Thibault Saunier <tsaunier@igalia.com>", "Sebastian Dröge <sebastian@centricular.com>"]
build = "build.rs"
description = "FFI bindings to libges-1.0"
documentation = "https://slomo.pages.freedesktop.org/rustdocs/gstreamer-sys/gstreamer_editing_services_sys/"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia", "nle"]
license = "MIT"
links = "ges-1.0"
name = "gstreamer-editing-services-sys"
readme = "README.md"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys"
version = "0.9.0"

[package.metadata.docs.rs]
features = ["dox", "v1_16"]
