[package]
name = "gstreamer-editing-services"
version = "0.19.0"
authors = ["Thibault Saunier <tsaunier@igalia.com>", "Sebastian Dröge <sebastian@centricular.com>"]
categories = ["api-bindings", "multimedia"]
description = "Rust bindings for GStreamer Editing Services"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://gstreamer.freedesktop.org"
documentation = "https://gstreamer.pages.freedesktop.org/gstreamer-rs/stable/latest/docs/gstreamer_editing_services/"
keywords = ["gstreamer", "multimedia", "gnome", "nle"]
edition = "2021"
rust-version = "1.63"

[dependencies]
libc = "0.2"
bitflags = "1.0"
ffi = { package = "gstreamer-editing-services-sys", version = "0.19", path = "sys"}
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.16", version = "0.16" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.16", version = "0.16" }
gst = { package = "gstreamer", version = "0.19", path = "../gstreamer" }
gst-base = { package = "gstreamer-base", version = "0.19", path = "../gstreamer-base" }
gst-pbutils = { package = "gstreamer-pbutils", version = "0.19", path = "../gstreamer-pbutils" }
serde = { version = "1.0", optional = true }

[dev-dependencies]
gir-format-check = "0.1"
serde_json = "1.0"

[features]
v1_16 = ["gst/v1_16", "gst-base/v1_16", "gst-pbutils/v1_16", "ffi/v1_16"]
v1_18 = ["gst/v1_18", "gst-base/v1_18", "gst-pbutils/v1_18", "ffi/v1_18", "v1_16"]
v1_20 = ["gst/v1_20", "gst-base/v1_20", "gst-pbutils/v1_20", "ffi/v1_20", "v1_18"]
v1_22 = ["gst/v1_22", "gst-base/v1_22", "gst-pbutils/v1_22", "ffi/v1_22", "v1_20"]
dox = ["ffi/dox", "glib/dox", "gio/dox", "gst/dox", "gst-base/dox", "gst-pbutils/dox", "serde"]
serde = ["dep:serde", "gst/serde", "gst-pbutils/serde"]

[package.metadata.docs.rs]
features = ["dox"]
