[package]
name = "gstreamer-editing-services"
authors = ["Thibault Saunier <tsaunier@igalia.com>", "Sebastian Dröge <sebastian@centricular.com>"]
description = "Rust bindings for GStreamer Editing Services"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://gstreamer.pages.freedesktop.org/gstreamer-rs/stable/latest/docs/gstreamer_editing_services/"
keywords = ["gstreamer", "multimedia", "gnome", "nle"]
version.workspace = true
categories.workspace = true
repository.workspace = true 
homepage.workspace = true 
edition.workspace = true 
rust-version.workspace = true 

[dependencies]
libc = "0.2"
ffi = { package = "gstreamer-editing-services-sys", path = "sys"}
glib.workspace = true
gio.workspace = true
gst.workspace = true
gst-base.workspace = true
gst-pbutils.workspace = true
serde = { version = "1.0", optional = true }

[dev-dependencies]
gir-format-check = "0.1"
serde_json = "1.0"

[features]
v1_16 = ["gst/v1_16", "gst-base/v1_16", "gst-pbutils/v1_16", "ffi/v1_16"]
v1_18 = ["gst/v1_18", "gst-base/v1_18", "gst-pbutils/v1_18", "ffi/v1_18", "v1_16"]
v1_20 = ["gst/v1_20", "gst-base/v1_20", "gst-pbutils/v1_20", "ffi/v1_20", "v1_18"]
v1_22 = ["gst/v1_22", "gst-base/v1_22", "gst-pbutils/v1_22", "ffi/v1_22", "v1_20"]
v1_24 = ["gst/v1_24", "gst-base/v1_24", "gst-pbutils/v1_24", "ffi/v1_24", "v1_22"]
serde = ["dep:serde", "gst/serde", "gst-pbutils/serde"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
