[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gstreamer-base-sys]
path = "../gstreamer-base-sys"
features = ["v1_14"]

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"
features = ["v1_14"]

[dependencies.gstreamer-video-sys]
path = "../gstreamer-video-sys"
features = ["v1_14"]

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
egl = []
x11 = []
wayland = []
v1_16 = ["gstreamer-sys/v1_16", "gstreamer-base-sys/v1_16", "gstreamer-video-sys/v1_16"]

[lib]
name = "gstreamer_gl_sys"

[package]
authors = ["Sebastian Dröge <sebastian@centricular.com>",
           "Víctor Manuel Jáquez Leal <vjaquez@igalia.com>"]
build = "build.rs"
description = "FFI bindings to libgstgl-1.0"
documentation = "https://slomo.pages.freedesktop.org/rustdocs/gstreamer-sys/gstreamer_gl_sys/"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia"]
license = "MIT"
links = "gstgl-1.0"
name = "gstreamer-gl-sys"
readme = "README.md"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys"
version = "0.9.0"

["package.metadata.docs.rs"]
features = ["dox", "v1_16"]
