[package]
name = "gstreamer-gl"
version = "0.19.2"
authors = [
    "Sebastian Dröge <sebastian@centricular.com>",
    "Víctor M. Jáquez L. <vjaquez@igalia.com>"
]
categories = ["api-bindings", "multimedia"]
description = "Rust bindings for GStreamer GL library"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://gstreamer.freedesktop.org"
documentation = "https://gstreamer.pages.freedesktop.org/gstreamer-rs/stable/latest/docs/gstreamer_gl/"
keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]
edition = "2021"
rust-version = "1.63"

[dependencies]
bitflags = "1.0"
byteorder = "1"
libc = "0.2"
once_cell = "1.0"
ffi = { package = "gstreamer-gl-sys", version = "0.19", path = "sys" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.16", version = "0.16.2" }
gst = { package = "gstreamer", version = "0.19", path = "../gstreamer" }
gst-base = { package = "gstreamer-base", version = "0.19", path = "../gstreamer-base" }
gst-video = { package = "gstreamer-video", version = "0.19", path = "../gstreamer-video" }
serde = { version = "1.0", optional = true }

[dev-dependencies]
gir-format-check = "0.1"
serde_json = "1.0"

[features]
default = []
v1_16 = ["gst/v1_16", "gst-base/v1_16", "gst-video/v1_16", "ffi/v1_16"]
v1_18 = ["gst/v1_18", "gst-base/v1_18", "gst-video/v1_18", "ffi/v1_18", "v1_16"]
v1_20 = ["gst/v1_20", "gst-base/v1_20", "gst-video/v1_20", "ffi/v1_20", "v1_18"]
v1_22 = ["gst/v1_22", "gst-base/v1_22", "gst-video/v1_22", "ffi/v1_22", "v1_20"]
dox = ["ffi/dox", "glib/dox", "gst/dox", "gst-base/dox", "gst-video/dox", "serde"]
serde = ["dep:serde", "gst/serde", "gst-video/serde"]

[package.metadata.docs.rs]
features = ["dox"]
